<resources>
    <string name="app_name">Checkpoint</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gps"></string>
    <string name="exiting_geofence">Exiting geofence</string>
    <string name="entering_geofence">Entering geofence</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="not_connected">Not connected</string>

    <string name="geofence_not_available">geofence_not_available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="unknown_geofence_error">unknown_geofence_error</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unkown transition</string>
    <string name="geofence_transition_invalid_type">Invalid transition type</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="title_activity_high_score">Highscore</string>
    <string name="title_activity_adrian_test">AdrianTest</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_how_to_play">How to play</string>


    <string name="hint_enter_game_field_radius">Enter a game field radius in km</string>
    <string name="button_play_game">Play Game</string>
    <string name="button_highscore">Highscore</string>
    <string name="button_help">Help</string>
    <string name="button_how_to_play">How to play</string>
    <string name="rotate_device">1. Rotate the device until you feel a vibration.</string>
    <string name="move_yourself">2. Move yourself in that direction.</string>
    <string name="hear_sound">3. When you hear a sound, you have reached the checkpoint.</string>
    <string name="title_activity_play_setup">Set up your game</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
