<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HowToPlayActivity"
    tools:showIn="@layout/activity_how_to_play">

    <ImageView
        android:id="@+id/ivAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="Animation"
        android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/rotate_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate_device"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        />
    <TextView android:id="@+id/move_yourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_yourself"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        />
    <TextView android:id="@+id/hear_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hear_sound"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        />
</LinearLayout>